--- a/whatsappclone-frontend/package.json
+++ b/whatsappclone-frontend/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "api-gen": "ng-openapi-gen --input ./src/openapi/openapi.json --output ./src/app/services"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +21,7 @@
     "@fortawesome/fontawesome-free": "^7.1.0",
     "bootstrap": "^5.3.8",
     "keycloak-js": "^26.2.1",
-    "ng-openapi-gen": "^1.0.5",
+    "ng-openapi-gen": "^0.14.0",
     "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
