Update: git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ whatsappclone-frontend/.git/
 whatsappclone-frontend/node_modules/
 whatsappclone-frontend/dist/
 whatsappclone/.mvn/wrapper/maven-wrapper.jar
-
+commands.md
